
=== Breaking

=== Added

=== Changed

=== Bugfixes

=== Deleted

=== Deprecated/Will break in a future version

== Releases

=== 3.2.2 - 2022-09-23

==== Added
* `Fraction::ToDecimal` transform (and supporting `Utils::ExtractFractions` and `Data::ConvertibleFraction` classes) (PR#108)
* `yardspec` gem to support running YARD examples as RSpec tests (PR#107)
* Branch coverage to `simplecov` setup (PR#107)

==== Changed
* Tests for the `Prepend::ToFieldValue` transform converted to use `yardspec` (PR#107)

==== Bugfixes
* No longer falls over when a project has nested job config settings (scope changes when used in a project, and the private :warn_unnested method couldn't be called)

=== 3.2.1 - 2022-09-21

==== Added
* Config setting to control string used as registry namespace separator

==== Bugfixes
* Require the kiba-common ShowMe extension so that option actually works when running jobs

==== Changed
* Refactoring `lib/kiba/extend.rb` so inter-application `require` statements can be removed

=== 3.2.0 - 2022-09-20

==== Added
* Configurable pre-job task handling
* `Kiba::Extend::Registry::FileRegistry.finalize` method
* Unnested `job_show_me`, `job_tell_me`, and `job_verbosity` config settings.

==== Deprecated/Will break in a future version
* Nested `job.show_me`, `job.tell_me`, and `job.verbosity` config settings.

=== 3.1.0 - 2022-09-20

==== Added
* Add publicly readable `srcrows` and `outrows` on `Kiba::Extend::Jobs::BaseJob` (inherited by all job types). This makes it possible to do things like this in client projects:

[source,ruby]
----
job = Kiba::Extend::Command::Run.job(:prep__objects)
puts "Some records omitted" if job.outrows < job.srcrows
----

These attributes were previously only accessible via:

[source,ruby]
----
job.context.instance_variable_get(:@srcrows)
----

==== Changed